1.13/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: todo-app:1.0
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /todo
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
